@@ -8,6 +8,7 @@ instance-already-defined=Attempted to define an instance that was already define
 undefiend-namespace=Attempted to use a namespace that was not initialized
 undefined-namespace-build=Attempted to build a namespace that didn't have a window defined
 invalid-namespace=Namespace contains an invalid character [__2__]: __1__
+invalid-player=Player index does not reference a valid player
 namespace-already-registered=Attempted to register a namespace that was already registered: __1__
 namespace-already-defined=Attempted to define a namespace that was already defined: __1__
 
